--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
+                <option value="anais">Anais</option>
                 <option value="elie">Elie</option>
                 <option value="gabriel">Gabriel</option>
                 <option value="guest">Guest</option>
@@ -100,6 +101,7 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
+                <option value="anais">Anais</option>
                 <option value="elie">Elie</option>
                 <option value="gabriel">Gabriel</option>
                 <option value="guest">Guest</option>
