add majusucle to the names

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <!-- Hiding the webhost tag -->
+    <!-- Hiding the webhost tag --> 
     <style> img[alt="www.000webhost.com"]{display:none;} </style>
     
     <!-- Viewport meta tag -->
@@ -37,21 +37,21 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
-                <option value="anais">Anais</option>
-                <option value="elie">Elie</option>
-                <option value="gabriel">Gabriel</option>
-                <option value="guest">Guest</option>
-                <option value="jeremy">Jeremy</option>
-                <option value="lante">Lante</option>
-                <option value="lazare">Lazare</option>
-                <option value="luna">Luna</option>
-                <option value="malik">Malik</option>
-                <option value="matthieu">Matthieu</option>
-                <option value="michael">Michael</option>
-                <option value="nathan">Nathan</option>
-                <option value="nathanael">Nathanael</option>
-                <option value="wissam">Wissam</option>
-                <option value="yassine">Yassine</option>
+                <option value="Anais">Anais</option>
+                <option value="Elie">Elie</option>
+                <option value="Gabriel">Gabriel</option>
+                <option value="Guest">Guest</option>
+                <option value="Jeremy">Jeremy</option>
+                <option value="Lante">Lante</option>
+                <option value="Lazare">Lazare</option>
+                <option value="Luna">Luna</option>
+                <option value="Malik">Malik</option>
+                <option value="Matthieu">Matthieu</option>
+                <option value="Michael">Michael</option>
+                <option value="Nathan">Nathan</option>
+                <option value="Nathanael">Nathanael</option>
+                <option value="Wissam">Wissam</option>
+                <option value="Yassine">Yassine</option>
             </select>
             <!-- Line break -->
             <br>
@@ -61,21 +61,21 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
-                <option value="anais">Anais</option>
-                <option value="elie">Elie</option>
-                <option value="gabriel">Gabriel</option>
-                <option value="guest">Guest</option>
-                <option value="jeremy">Jeremy</option>
-                <option value="lante">Lante</option>
-                <option value="lazare">Lazare</option>
-                <option value="luna">Luna</option>
-                <option value="malik">Malik</option>
-                <option value="matthieu">Matthieu</option>
-                <option value="michael">Michael</option>
-                <option value="nathan">Nathan</option>
-                <option value="nathanael">Nathanael</option>
-                <option value="wissam">Wissam</option>
-                <option value="yassine">Yassine</option>
+                <option value="Anais">Anais</option>
+                <option value="Elie">Elie</option>
+                <option value="Gabriel">Gabriel</option>
+                <option value="Guest">Guest</option>
+                <option value="Jeremy">Jeremy</option>
+                <option value="Lante">Lante</option>
+                <option value="Lazare">Lazare</option>
+                <option value="Luna">Luna</option>
+                <option value="Malik">Malik</option>
+                <option value="Matthieu">Matthieu</option>
+                <option value="Michael">Michael</option>
+                <option value="Nathan">Nathan</option>
+                <option value="Nathanael">Nathanael</option>
+                <option value="Wissam">Wissam</option>
+                <option value="Yassine">Yassine</option>
             </select>
             <!-- Line break -->
             <br>
@@ -101,21 +101,21 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
-                <option value="anais">Anais</option>
-                <option value="elie">Elie</option>
-                <option value="gabriel">Gabriel</option>
-                <option value="guest">Guest</option>
-                <option value="jeremy">Jeremy</option>
-                <option value="lante">Lante</option>
-                <option value="lazare">Lazare</option>
-                <option value="luna">Luna</option>
-                <option value="malik">Malik</option>
-                <option value="matthieu">Matthieu</option>
-                <option value="michael">Michael</option>
-                <option value="nathan">Nathan</option>
-                <option value="nathanael">Nathanael</option>
-                <option value="wissam">Wissam</option>
-                <option value="yassine">Yassine</option>
+                <option value="Anais">Anais</option>
+                <option value="Elie">Elie</option>
+                <option value="Gabriel">Gabriel</option>
+                <option value="Guest">Guest</option>
+                <option value="Jeremy">Jeremy</option>
+                <option value="Lante">Lante</option>
+                <option value="Lazare">Lazare</option>
+                <option value="Luna">Luna</option>
+                <option value="Malik">Malik</option>
+                <option value="Matthieu">Matthieu</option>
+                <option value="Michael">Michael</option>
+                <option value="Nathan">Nathan</option>
+                <option value="Nathanael">Nathanael</option>
+                <option value="Wissam">Wissam</option>
+                <option value="Yassine">Yassine</option>
             </select>
             <!-- Line break -->
             <br>
@@ -124,21 +124,21 @@
                 <!-- Default empty option -->
                 <option value="" selected="selected"></option>
                 <!-- List of possible player names -->
-                <option value="anais">Anais</option>
-                <option value="elie">Elie</option>
-                <option value="gabriel">Gabriel</option>
-                <option value="guest">Guest</option>
-                <option value="jeremy">Jeremy</option>
-                <option value="lante">Lante</option>
-                <option value="lazare">Lazare</option>
-                <option value="luna">Luna</option>
-                <option value="malik">Malik</option>
-                <option value="matthieu">Matthieu</option>
-                <option value="michael">Michael</option>
-                <option value="nathan">Nathan</option>
-                <option value="nathanael">Nathanael</option>
-                <option value="wissam">Wissam</option>
-                <option value="yassine">Yassine</option>
+                <option value="Anais">Anais</option>
+                <option value="Elie">Elie</option>
+                <option value="Gabriel">Gabriel</option>
+                <option value="Guest">Guest</option>
+                <option value="Jeremy">Jeremy</option>
+                <option value="Lante">Lante</option>
+                <option value="Lazare">Lazare</option>
+                <option value="Luna">Luna</option>
+                <option value="Malik">Malik</option>
+                <option value="Matthieu">Matthieu</option>
+                <option value="Michael">Michael</option>
+                <option value="Nathan">Nathan</option>
+                <option value="Nathanael">Nathanael</option>
+                <option value="Wissam">Wissam</option>
+                <option value="Yassine">Yassine</option>
             </select>
             <!-- Line break -->
             <br>
